2006-08-24  Michael Stucki  <michael@typo3.org>

	* Changed default value of $TYPO3_CONF_VARS[SYS][devIPmask] to "127.0.0.1,::1"
	* Fixed bug #1236: 404 error while using the new content wizard
	* Fixed bug #3909: TYPO3_SSL does not detect valid SSL session
	* Fixed bug #3973: pageNotFound_handling=TRUE is interpreted as URL

2006-08-23  Michael Stucki  <michael@typo3.org>

	* Fixed bug #3960: Display correct version number in Install Tool (only when authenticated)
	* Fixed bug #4073: Extension manager doesn't find extensions if the search string contains a trailing space
	* Fixed bug #3990: $BE_USER property "disableTabInTextarea" is not respected

2006-08-19  Dmitry Dulepov  <typo3@accio.lv>

	* Fix bug 4037: Link from Google AdWords fails due to wrong alias handling

2006-08-19 Ingmar Schlecht  <ingmar@typo3.org>

	* Parly fixed #4013: New records in non-default language are displayed in list-module in localization view too now even if they don't have a parent record in the default language.

2006-08-17 Ingmar Schlecht  <ingmar@typo3.org>

	* Added text to Update Wizard informing about the change of the default values of "config.inlineStyle2TempFile" and "config.removeDefaultJS" depending on compatVersion >= 4.0

2006-08-14  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Corrections/adjustments to the htmlArea RTE extension (see details in local ChangeLog)

2006-08-04 Wolfgang Klinger <wk@plan2.net>

	* Fix bug #3160: IFSUB is not true if the parent page is a shortcut page

2006-07-31  Dmitry Dulepov  <typo3@accio.lv>

	* Fixed endless page retrieval if pageNotFound_handling is set to URL of a local non existing page

2006-07-31  Michael Stucki  <michael@typo3.org>

	* Updates to NEWS.txt (thanks to Martin Kutschker)
	* Changed version requirements for t3skin (problems in combination with TYPO3 4.0.1)

2006-07-30  Michael Stucki  <michael@typo3.org>

	* Fix bug #3362 (again): Bugfix used t3lib_div which is missing at that point