@@ -1,7 +1,7 @@
 <?php
 if (!defined ('TYPO3_MODE')) 	die ('Access denied.');
 
-//require_once(t3lib_extMgm::extPath('t3skin').'debuglib.php');
+// require_once(t3lib_extMgm::extPath('t3skin').'debuglib.php');
 
 if (TYPO3_MODE=='BE')	{
 
