@@ -1,6 +1,13 @@
+2006-08-25  Michael Stucki  <michael@typo3.org>
+
+	* Fixed bug #4076: Skin creates invalid HTML markup
+	* Fixed bug #1454: Cookie lifetime set in localconf.php will be ignored. Thanks to Dietrich Heise and Jeff Segars.
+	* Fixed bug #3922: config.spamProtectEmailAddresses doesn't respect config.removeDefaultJS setting. Thanks to Benjamin Mack.
+	* Added a new parameter to tslib_pibase->pi_classParam() which may contain classes that should not be prefixed.
+
 2006-08-24  Michael Stucki  <michael@typo3.org>
 
-	* Changed default value of $TYPO3_CONF_VARS[SYS][devIPmask] to "127.0.0.1,::1"
+	* !!! Changed default value of $TYPO3_CONF_VARS[SYS][devIPmask] to "127.0.0.1,::1" (removed "192.168.*")
 	* Fixed bug #1236: 404 error while using the new content wizard
 	* Fixed bug #3909: TYPO3_SSL does not detect valid SSL session
 	* Fixed bug #3973: pageNotFound_handling=TRUE is interpreted as URL
